--- a/docs/content/development/changelog.mdx
+++ b/docs/content/development/changelog.mdx
@@ -8,6 +8,134 @@ This is the aggregated changelog for the entire Rhesis repository. For detailed 
 - [Frontend Changelog](https://github.com/rhesis-ai/rhesis/blob/main/apps/frontend/CHANGELOG.md)
 - [Polyphemus Changelog](https://github.com/rhesis-ai/rhesis/blob/main/apps/polyphemus/CHANGELOG.md)
 
+## [0.6.6] - 2026-02-26
+
+### Platform Release
+
+This release includes the following component versions:
+- **Backend 0.6.5**
+- **Frontend 0.6.6**
+- **SDK 0.6.6**
+- **Polyphemus 0.2.6**
+
+### Summary
+
+This release introduces **Polyphemus access control with delegation tokens**, **conversation-based tracing for multi-turn interactions**, and **test set type enforcement** across the platform. It also addresses multiple security vulnerabilities across all components.
+
+### Featured Capabilities
+
+**Polyphemus Access Control**
+
+Secure, governed access to Polyphemus models:
+
+- **Request/Grant Workflow**: Users can request access to Polyphemus, admins can grant or revoke it
+- **Delegation Tokens**: Service-level delegation tokens for secure Polyphemus authentication
+- **Frontend UI**: Access request modal and model card UI states for clear visibility into access status
+- **Rate Limiting**: Added rate limiting to the Polyphemus service to prevent abuse
+
+**Conversation-Based Tracing**
+
+End-to-end observability for multi-turn conversations:
+
+- **Shared Trace IDs**: Multi-turn conversation interactions are linked under a shared `trace_id`
+- **Conversation View Tab**: Dedicated UI tab for exploring conversation traces
+- **Turn Navigation**: Navigate between turns directly within the trace detail view
+- **Enhanced Graph View**: Turn labels on edges, progressive agent invocation counts, and improved edge routing
+
+**Test Set Type Enforcement**
+
+Stricter type safety across test sets:
+
+- **Required on Creation**: `test_set_type` is now required when creating test sets via backend, frontend, and SDK
+- **Type-Matching Validation**: Tests can only be assigned to test sets of a matching type
+- **Consistent Enforcement**: Applied uniformly across all interfaces
+
+### Backend Highlights
+- Mitigated OAuth callback URL host header poisoning vulnerability
+- Updated vulnerable dependencies (cryptography, pillow, fastmcp, redis, langgraph-checkpoint, marshmallow, virtualenv, mammoth, langchain-core)
+- Added Polyphemus integration with service delegation tokens and access control request/grant workflow
+- Implemented conversation-based tracing across SDK, backend, and frontend with `trace_id` linking
+- Enforced `test_set_type` requirement on test set creation and type-matching when assigning tests
+
+### Frontend Highlights
+- Added Polyphemus access request modal, model card UI states, and Polyphemus provider icon/logo
+- Improved trace UI with conversation tracing support: conversation icon, type filter buttons, Conversation View tab, and turn navigation
+- Enhanced trace graph view with turn labels on edges, progressive agent invocation count, improved edge routing, and resizable trace detail drawer
+- Fixed security vulnerabilities in frontend transitive dependencies
+
+### SDK Highlights
+- Enhanced Polyphemus integration with access control and delegation tokens
+- Improved LLM error handling with retries, logging, and fallback mechanisms
+- Added conversation-based tracing for multi-turn interactions
+- Migrated from python-jose to PyJWT and updated dependencies to address security vulnerabilities
+
+### Polyphemus Highlights
+- Added rate limiting to the Polyphemus service
+- Implemented access control and delegation tokens with a request/grant workflow and frontend UI
+- Deployed vLLM to Vertex AI with GCP credential caching and retry logic
+- Migrated from python-jose to PyJWT and updated dependencies to resolve security vulnerabilities
+
+## [0.6.5] - 2026-02-18
+
+### Platform Release
+
+This release includes the following component versions:
+- **Backend 0.6.4**
+- **Frontend 0.6.5**
+- **SDK 0.6.5**
+- **Polyphemus 0.2.5** (no changes in this release)
+
+### Summary
+
+This release introduces **AI-powered auto-configuration for endpoints**, **three-tier metrics evaluation for multi-turn tests**, and **adaptive testing capabilities** including a Test Explorer UI and output generation.
+
+### Featured Capabilities
+
+**AI-Powered Endpoint Auto-Configure**
+
+Intelligent endpoint setup from reference material:
+
+- **Natural Language Input**: Analyze curl commands, code snippets, or API docs to generate Rhesis request/response mappings
+- **Self-Correcting Probing**: LLM-driven endpoint probing with self-correction for accurate configuration
+- **API Key Redaction**: Automatically detects and redacts secrets before sending to the LLM, with a frontend warning when keys are detected
+- **SSRF Protection**: Blocks cloud metadata service addresses while allowing localhost for safe probing
+- **Two-Step UI**: Auto-configure modal with input and review steps, integrated into the endpoint creation form
+
+**Three-Tier Metrics for Multi-Turn Tests**
+
+Comprehensive metric evaluation in live multi-turn execution:
+
+- **Full Metric Coverage**: All metrics defined in the three-tier model (behavior > test set > execution) are now evaluated, not just Penelope's Goal Achievement metric
+- **Metrics Table**: Frontend now shows a metrics table for multi-turn test results
+- **Pass/Fail Determination**: All evaluated metrics contribute to overall pass/fail outcomes
+
+**Adaptive Testing**
+
+New tools for building and managing adaptive test suites:
+
+- **Test Explorer UI**: Browse and manage adaptive tests and topics
+- **CRUD Operations**: Create, update, and delete tests and topics via SDK
+- **Output Generation**: Generate test outputs with improved async performance
+
+### Backend Highlights
+- Evaluated three-tier metrics during live multi-turn execution, expanding beyond Penelope's Goal Achievement metric
+- Added AI-powered auto-configure service with LLM-driven analysis, endpoint probing, and self-correction
+- Added API key detection and redaction for auto-configure to prevent secrets reaching the LLM
+- Added SSRF protection blocking cloud metadata services (169.254.0.0/16) during endpoint probing
+- Supported nested JSON in request/response mappings (`Dict[str, Any]`)
+
+### Frontend Highlights
+- Added auto-configure modal with two-step stepper (input + review) integrated into the endpoint creation form
+- Displayed metrics table for multi-turn test results and used all metrics for pass/fail determination
+- Fixed redirect after endpoint creation to navigate to the project detail page
+- Improved auto-configure UX: removed mandatory auth token requirement to support open APIs
+
+### SDK Highlights
+- Added `Endpoint.auto_configure()` class method for code-first auto-configuration using the backend service
+- Introduced Adaptive Testing features including Test Explorer UI, CRUD operations for tests and topics, and output generation
+- Unified model handling with a single `get_model()` function simplifying model selection and configuration
+- Improved output generation performance using asynchronous HTTP requests
+
 ## [0.6.4] - 2026-02-12
 
 ### Platform Release
