--- a/docs/content/penelope/getting-started.mdx
+++ b/docs/content/penelope/getting-started.mdx
@@ -151,7 +151,7 @@ Override the default Vertex AI model:
 
 agent = PenelopeAgent(
     model=AnthropicLLM(model_name="claude-4"),
-    max_iterations=20,
+    max_turns=20,
     enable_transparency=True,
 )`}
 
